# sig-hakatashi

2/hello/: package.json
2/hello/app/controllers/: hello_controller.rb
2/hello/app/views/hello/: days.html.erb
2/hello/config/: application.rb  credentials.yml.enc  routes.rb
2/sushi/: README.md  package.json
2/sushi-backend/: Cargo.toml  Dockerfile  docker-compose.yml
2/sushi-backend/src/: main.rs
2/sushi/public/: index.html
2/sushi/src/: App.vue
2/sushi/src/components/: Control.vue  Sushi.vue  SushiApp.vue  SushiBoard.vue
