[package]
name = "sushi-backend"
version = "0.1.0"
authors = ["moratorium08 <moratorium08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
lazy_static = "1.4.0"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
